JSR292: Failed to reject invalid class cplmhl00201m28n

XMLWordPrintable

    • b30
    • b35
    • Not verified

        during PIT of hs25-b31 for jdk8-b89 tests 'vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m2' and 'vm/classfmt/cpl/cplmhl002/cplmhl00201m3/cplmhl00201m3' have failed on all platforms:

        ----------out2:(8/1401)----------
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 1 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m21n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 29 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m22n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 6 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m23n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 7 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m24n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 9 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m25n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 11 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m26n (not a method)
        Passed with loading exception: java.lang.ClassFormatError: Invalid constant pool index 16 in class file javasoft/sqe/tests/vm/classfmt/cpl/cplmhl002/cplmhl00201m2/cplmhl00201m27n (not a method)
        Failed to reject invalid class cplmhl00201m28n
        result: Failed. test failed

              Assignee:
              Bharadwaj Yadavalli (Inactive)
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: