8014059: JSR292: Failed to reject invalid class cplmhl00201m28n

Restrict reference of interface methods by invokestatic and invokespecial to classfile version 52 or later.

Reviewed-by: kvn, hseigel